--- a/Biblio_ressources.html
+++ b/Biblio_ressources.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Datactivist - Anne-Laure Donzel" />
 
-<meta name="date" content="2022-03-29" />
+<meta name="date" content="2022-04-28" />
 
 <title>Bibliographie et ressources</title>
 
@@ -293,13 +293,15 @@ if (window.hljs) {
 <h1 class="title toc-ignore">Bibliographie et ressources</h1>
 <h3 class="subtitle">Cours open data - Ministère de la Culture</h3>
 <h4 class="author">Datactivist - Anne-Laure Donzel</h4>
-<h4 class="date">2022-03-29</h4>
+<h4 class="date">2022-04-28</h4>
 
 
 
-<div id="bibliographie" class="section level3">
-<h3>Bibliographie</h3>
+<div id="rapports-et-guides-pratiques" class="section level1">
+<h1>Rapports et guides pratiques</h1>
 <ul>
+<li><p><strong>Feuille de route <em>Données et contenus
+culturels</em></strong>, URL : <a href="https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels" class="uri">https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels</a></p></li>
 <li><p><strong>Guide pratique dédié à l’ouverture des données publiques
 culturelles</strong> Publié par le ministère de la Culture, juillet
 2019, URL : <a href="http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles" class="uri">http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles</a></p></li>
@@ -310,22 +312,54 @@ du secteur culturel</strong> Publié par le ministère de la Culture,
 <li><p><strong>Guide de bonnes pratiques en matière de propriété
 littéraire et artistique</strong> Publié par le ministère de la Culture,
 2017, URL : <a href="http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique" class="uri">http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique</a></p></li>
-<li><ul>
-<li>Rapport « Ouverture et partage des données publiques culturelles –
-pour une(r)évolution numérique dans le secteur culturel », Camille
-Domange, publié par le ministère de la Culture et de la Communication,
-décembre 2013, URL : <a href="https://www.culture.gouv.fr/Espace-documentation/Rapports/Open-Data-ouverture-et-partage-des-donnees-publiques-culturelles" class="uri">https://www.culture.gouv.fr/Espace-documentation/Rapports/Open-Data-ouverture-et-partage-des-donnees-publiques-culturelles</a></li>
-</ul></li>
+<li><p><strong>Rapport « Ouverture et partage des données publiques
+culturelles – pour une(r)évolution numérique dans le secteur culturel
+»</strong>, Camille Domange, publié par le ministère de la Culture et de
+la Communication, décembre 2013, URL : <a href="https://www.culture.gouv.fr/Espace-documentation/Rapports/Open-Data-ouverture-et-partage-des-donnees-publiques-culturelles" class="uri">https://www.culture.gouv.fr/Espace-documentation/Rapports/Open-Data-ouverture-et-partage-des-donnees-publiques-culturelles</a></p></li>
 <li><p><strong>Les musées départementaux de la Haute-Saône et
 Wikipédia</strong> : de l’institution à la contribution, Nicolas
 Poulain, La Lettre de l’OCIM [En ligne],164 | 2016, mis en ligne le 01
 mars 2017, URL : <a href="http://journals.openedition.org/ocim/1642" class="uri">http://journals.openedition.org/ocim/1642</a></p></li>
+<li><p><strong>Guide pratique pour la recherche et la réutilisation des
+images d’œuvres d’art</strong>, INHA, 2021, URL : <a href="https://www.inha.fr/_resources/PDF/2021/2021_LIVRET_GUIDE-PRATIQUE_web_15062021.pdf" class="uri">https://www.inha.fr/_resources/PDF/2021/2021_LIVRET_GUIDE-PRATIQUE_web_15062021.pdf</a></p></li>
 <li><p><strong>Droits des images, histoire de l’art et société</strong>
 - Rapport sur les régimes de diffusion des images patrimoniales et leur
 impact sur la recherche, l’enseignement et la mise en valeur des
 collections publiques Programme Images/usages, Institut national
-d’histoire de l’art, octobre 2018, URL : <a href="https://www.inha.fr/_attachments/rapport-final-du-programme-images-usages-article/INHA_rapport_images_usages.pdf?download=true" class="uri">https://www.inha.fr/_attachments/rapport-final-du-programme-images-usages-article/INHA_rapport_images_usages.pdf?download=true</a>
-—</p></li>
+d’histoire de l’art, octobre 2018, URL : <a href="https://www.inha.fr/_attachments/rapport-final-du-programme-images-usages-article/INHA_rapport_images_usages.pdf?download=true" class="uri">https://www.inha.fr/_attachments/rapport-final-du-programme-images-usages-article/INHA_rapport_images_usages.pdf?download=true</a></p></li>
+<li><p>Martine Denoyelle, “Le droit d’auteur du photographe et le
+patrimoine culturel,” in Numérique et recherche en histoire de l’art,
+03/06/2021, <a href="https://numrha.hypotheses.org/2137" class="uri">https://numrha.hypotheses.org/2137</a></p></li>
+</ul>
+</div>
+<div id="sites-internet" class="section level1">
+<h1>Sites internet</h1>
+<ul>
+<li><p><strong>Plateforme open data du Ministère</strong> - <a href="https://data.culture.gouv.fr/pages/home/" class="uri">https://data.culture.gouv.fr/pages/home/</a></p></li>
+<li><p><strong>Open Glam</strong> - <a href="https://openglam.org/france/" class="uri">https://openglam.org/france/</a></p></li>
+<li><p><strong>Etalab</strong> -</p></li>
+<li><p><strong>Schema data.gouv</strong> - <a href="https://schema.data.gouv.fr/" class="uri">https://schema.data.gouv.fr/</a></p></li>
+<li><p><strong>Iconautes</strong> - Blog de l’INHA <a href="https://iconautes.inha.fr/fr/index.html" class="uri">https://iconautes.inha.fr/fr/index.html</a></p></li>
+</ul>
+</div>
+<div id="ressources-sur-open-refine" class="section level1">
+<h1>Ressources sur Open Refine</h1>
+<ul>
+<li><p>OpenRefine, “Excel aux hormones” pour nettoyage de données[<a href="https://www.patrimoine-et-numerique.fr/tutoriels/52-36-openrefine-excel-aux-hormones-pour-nettoyage-de-donnees" class="uri">https://www.patrimoine-et-numerique.fr/tutoriels/52-36-openrefine-excel-aux-hormones-pour-nettoyage-de-donnees</a>]</p></li>
+<li><p>Tutoriel OpenRefine 3.4 : nettoyer, préparer et transformer des
+données - 06/11/2020[<a href="http://bit.ly/tutoOpenRefine" class="uri">http://bit.ly/tutoOpenRefine</a>]</p></li>
+<li><p>Cas concret d’utilisation d’OpenRefine pour les archives[<a href="https://medium.com/@seeksanusername/cas-concret-dutilisation-d-openrefine-pour-les-archives-442726996b74" class="uri">https://medium.com/@seeksanusername/cas-concret-dutilisation-d-openrefine-pour-les-archives-442726996b74</a>]</p></li>
+</ul>
+</div>
+<div id="journées-détude" class="section level1">
+<h1>Journées d’étude</h1>
+<ul>
+<li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2022/Documentation"><em>Culture
+et Numérique 2022</em></a></p></li>
+<li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2021/Documentation"><em>Culture
+et Numérique 2021</em></a></p></li>
+<li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Wikim%C3%A9dia_France/Groupes_de_travail/Groupes_th%C3%A9matiques/GLAM/Journ%C3%A9es_Wikimedia_Culture_et_Num%C3%A9rique_2019/Documentation"><em>Culture
+et Numérique 2019</em></a></p></li>
 </ul>
 </div>
 
