--- a/OLD/classevirtuelle072020.html
+++ b/OLD/classevirtuelle072020.html
@@ -7,17 +7,18 @@
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist-fonts.css" rel="stylesheet" />
-    <script src="libs/htmlwidgets-1.5.3/htmlwidgets.js"></script>
-    <link href="libs/vis-4.16.1/vis.min.css" rel="stylesheet" />
-    <script src="libs/vis-4.16.1/vis.min.js"></script>
+    <script src="libs/htmlwidgets-1.5.4/htmlwidgets.js"></script>
+    <link href="libs/visjs-7.4.9/vis-timeline-graph2d.min.css" rel="stylesheet" />
+    <script src="libs/visjs-7.4.9/vis-timeline-graph2d.min.js"></script>
     <link href="libs/timeline-0.4/timevis.css" rel="stylesheet" />
-    <script src="libs/timevis-binding-1.0.0/timevis.js"></script>
+    <script src="libs/timevis-binding-2.0.0/timevis.js"></script>
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Open Data : comprendre les enjeux de l’ouverture des données publiques culturelles.
+# Open Data : comprendre les enjeux de l’ouverture des données publiques
+culturelles.
 ## Ministère de la Culture
 ### 
 
@@ -616,14 +617,18 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
 
+```
+## Warning: package 'timevis' was built under R version 4.0.5
+```
+
 ```{=html}
-&lt;div id="htmlwidget-ad36b8a263dc1e0b2c6b" class="timevis html-widget" style="width:715px;height:350px;"&gt;
+&lt;div id="htmlwidget-40a49fa3cdd9ecf152eb" class="timevis html-widget" style="width:715px;height:350px;"&gt;
 &lt;div class="btn-group zoom-menu"&gt;
 &lt;button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in"&gt;+&lt;/button&gt;
 &lt;button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out"&gt;-&lt;/button&gt;
 &lt;/div&gt;
 &lt;/div&gt;
-&lt;script type="application/json" data-for="htmlwidget-ad36b8a263dc1e0b2c6b"&gt;{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","timezone":null,"api":[]},"evals":[],"jsHooks":[]}&lt;/script&gt;
+&lt;script type="application/json" data-for="htmlwidget-40a49fa3cdd9ecf152eb"&gt;{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","timezone":null,"api":[]},"evals":[],"jsHooks":[]}&lt;/script&gt;
 ```
 
 ---
